# RisetUntukTunantera

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/risetuntuktunantera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/risetuntuktunantera/: MainActivity.kt
app/src/main/java/com/example/risetuntuktunantera/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/risetuntuktunantera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
native/g2o/: CMakeLists.txt
